# fg-translate

./: Cargo.toml  README.md  build.rs
src/: main.rs  writer.rs
src/check/: entry.rs  mod.rs  transpile.rs
src/create/: entry.rs  formatter.rs  mod.rs
src/publish/: entry.rs  fromname.rs  mod.rs  request.rs
src/utils/: mod.rs  reader.rs  shared.rs  terminal.rs  validator.rs
