[package]
name = "fg-translate"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
regex = "1"
ansi_term = "0.12"


[target.'cfg(windows)'.build-dependencies]
winres = "0.1"